# gis_visualizer

./: ADD_FEATURE.md  Cargo.toml  Trunk.toml  convert.py  convert_gpkg_to_fgb.py  index.html  serve_fgb.py  taxi_data.gpkg
.cargo/: config.toml
plugins/binned-3d-map/: main.py  plugin.toml  test_binned_3d_map.py
plugins/buffer-tool/: main.py  plugin.toml
plugins/distance-heatmap/: main.py  plugin.toml
plugins/hello-world/: main.py  plugin.toml
plugins/layer-intersection/: main.py  plugin.toml
plugins/od-endpoints/: main.py  plugin.toml
plugins/od-flow-lines/: main.py  plugin.toml
plugins/plot/: main.py  plugin.toml
plugins/point-convex-hull/: main.py  plugin.toml
plugins/raster-threshold-regions/: main.py  plugin.toml
sdk/: pyproject.toml
sdk/gis_editor_sdk/: __init__.py  geo.py  host.py  protocol.py  runtime.py
src/: app.rs  basemap.rs  bivariate.rs  crs.rs  exporter.rs  filter.rs  gis_layer.rs  gis_reader.rs  globe.rs  gpu_collect.rs  gridbin.rs  heatmap.rs  hilbert_curve.rs  hilbert_r_tree.rs  histogram.rs  kde.rs  main.rs  map_view.rs  parquet.rs  point_cloud.rs  point_cloud_layer.rs  quadtree.rs  raster_reader.rs  rtree_index.rs  sampling.rs  selection_stats.rs  sidebar.rs  snapshot.rs  spatial_index.rs  stats_core.rs  uncertainty_quadtree.rs  vector_gpu.rs
src/app/: loader.rs  mod.rs  plot_style.rs  plugin_bridge.rs  ui.rs  ui_layer_panel.rs  ui_loading.rs  ui_map.rs  ui_menu.rs  ui_plugins.rs  ui_sidebar.rs  ui_windows.rs
src/plugin/: bridge.rs  manifest.rs  mod.rs  process.rs  protocol.rs  runner.rs  sdk_test.rs
tests/fixtures/: echo_plugin.py  sdk_roundtrip_plugin.py
