[package]
name = "gis_editor"
version = "0.1.0"
edition = "2021"

[language-server.rust-analyzer.config]
cargo.targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
check.targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.34", features = ["wgpu", "wayland"] }
egui = "0.34"
egui-wgpu = "0.34"
egui_plot = "0.35"
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
geo = "0.33"
geo-types = "0.7"
earcutr = "0.5"
anyhow = "1"
rfd = { version = "0.17", features = ["file-handle-inner"] }
image = { version = "0.25", default-features = false, features = ["png"] }
flatgeobuf = "6.0.1"
geozero = { version = "0.15", features = ["with-geo"] }
rand = "0.10.1"
kernel-density-estimation = "0.2.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rstar = "0.12"
bitvec = "1.0.1"
futures-channel = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.3.0"
pollster = "0.4"
datafusion = { version = "43", default-features = true,
  features = [
      "parquet",
      "regex_expressions",
  ] }
tokio = { version = "1", features = ["rt-multi-thread"] }



[profile.release]
# opt-level = "s"
# lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "Request",
    "File",
    "Blob",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
bytes = "1"
gloo-timers = { version = "0.3", features = ["futures"] }


