[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gis-editor-sdk"
version = "0.1.0"
description = "SDK for writing gis_editor plugins in Python"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
    "pyarrow>=14",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gis_editor_sdk"]
